create Gin Service into application
